--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </head>
 <body>
   <h1>Show your work or you are COOKED</h1>
+  <h3>include original question</h3>
   <div id="question">Click the button to get your 3 problems!</div>
   <button onclick="generateProblems()">New Problems</button>
 
